file change updated

--- a/bDot/cabone/index.html
+++ b/bDot/cabone/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/common.css"/>
     <link rel="stylesheet" href="./css/style.css"/>
 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </head>
 <body>
@@ -105,7 +107,7 @@
                 복합소재 전문기업, 한국카본
             </p>
 
-            <div class="motionCircleEffect"></div>
+            <div class="motionCircleEffect motionCircle1" ></div>
         </div>
     </section>
     <section class="section02">
@@ -158,7 +160,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="motionCircleEffect"></div>
+            <div class="motionCircleEffect motionCircle2"></div>
         </div>
     </section>
     <section class="section04">
@@ -181,7 +183,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="motionCircleEffect"></div>
+            <div class="motionCircleEffect motionCircle1"></div>
         </div>
     </section>
     <section class="section05 parallaxmotionSection">
@@ -210,7 +212,7 @@
                     <p class="descTxt SpoqaHansans">복합소재 전문기업,한국카본</p>
                 </div>
             </div>
-            <div class="motionCircleEffect"></div>
+            <div class="motionCircleEffect motionCircle2"></div>
         </div>
     </section>
 
@@ -218,33 +220,51 @@
         <div class="inner">
             <div class="floatRightRow">
                 <article class="dataArticle first">
-                    <div class="lineDeco"></div>
-                    <h3 class="numberVal SpoqaHansans">39</h3>
-                    <h4 class="titTxt SpoqaHansans">1984년 설립</h4>
-                    <p class="descTxt SpoqaHansans">한국카본은 낚시대 재료인 Carbon Sheet를 생산하며 1984년 설립,출범하였습니다.</p>
+                    <div class="lineDeco"data-aos="fade-up"data-aos="fade-up"data-aos-offset="300"
+                    data-aos-easing="ease-in-sine"></div>
+                    <h3 class="numberVal SpoqaHansans"data-aos="fade-up"data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">39</h3>
+                    <h4 class="titTxt SpoqaHansans"data-aos="fade-up"data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">1984년 설립</h4>
+                    <p class="descTxt SpoqaHansans"data-aos="fade-up"data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">한국카본은 낚시대 재료인 Carbon Sheet를 생산하며 1984년 설립,출범하였습니다.</p>
                 </article>
             </div>
             <article class="dataArticle second">
-                <div class="lineDeco"></div>
-                <h3 class="numberVal SpoqaHansans">4700</h3>
-                <h4 class="titTxt SpoqaHansans">국내/외 고객사</h4>
-                <p class="descTxt SpoqaHansans">한국카본은 4,700여개의 국내/외 고객사와 함께합니다.</p>
+                <div class="lineDeco"data-aos="fade-left"data-aos="fade-left" data-aos-offset="300"
+                data-aos-easing="ease-in-sine"></div>
+                <h3 class="numberVal SpoqaHansans"data-aos="fade-left" data-aos-offset="300"
+                data-aos-easing="ease-in-sine">4700</h3>
+                <h4 class="titTxt SpoqaHansans"data-aos="fade-left" data-aos-offset="300"
+                data-aos-easing="ease-in-sine">국내/외 고객사</h4>
+                <p class="descTxt SpoqaHansans"data-aos="fade-left" data-aos-offset="300"
+                data-aos-easing="ease-in-sine">한국카본은 4,700여개의 국내/외 고객사와 함께합니다.</p>
             </article>
             <div class="floatRightRow">
                 <article class="dataArticle third">
-                    <div class="lineDeco"></div>
-                    <h3 class="numberVal SpoqaHansans">1</h3>
-                    <h4 class="titTxt SpoqaHansans">국내 NO.1 복합소재기업</h4>
-                    <p class="descTxt SpoqaHansans">한국카본은 국내 복합소재 분야를 선도합니다.</p>
+                    <div class="lineDeco"data-aos="fade-right"data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000"></div>
+                    <h3 class="numberVal SpoqaHansans"data-aos="fade-right"data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">1</h3>
+                    <h4 class="titTxt SpoqaHansans"data-aos="fade-right"data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">국내 NO.1 복합소재기업</h4>
+                    <p class="descTxt SpoqaHansans"data-aos="fade-right"data-aos-easing="ease-out-cubic"
+                    data-aos-duration="2000">한국카본은 국내 복합소재 분야를 선도합니다.</p>
                 </article>
             </div>
             <article class="dataArticle four">
-                <div class="lineDeco"></div>
-                <h3 class="numberVal SpoqaHansans">75</h3>
-                <h4 class="titTxt SpoqaHansans">특허/국제표준인증</h4>
-                <p class="descTxt SpoqaHansans">한국카본은 국제표준인증 관리를 통한 지속적인 개선을 추구합니다.</p>
+                <div class="lineDeco" data-aos="zoom-in-up"></div>
+                <h3 class="numberVal SpoqaHansans" data-aos="zoom-in-up"data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="100">75</h3>
+                <h4 class="titTxt SpoqaHansans" data-aos="zoom-in-up" data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="100">특허/국제표준인증</h4>
+                <p class="descTxt SpoqaHansans" data-aos="zoom-in-up"data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="100">한국카본은 국제표준인증 관리를 통한 지속적인 개선을 추구합니다.</p>
             </article>
-            <div class="motionCircleEffect"></div>
+            <div class="motionCircleEffect motionCircle3"></div>
         </div>
     </section>
 
@@ -255,14 +275,14 @@
             <p class="descTxt SpoqaHansans">새로운 기술과 가치를 창조합니다</p>
 
             <ul class="imgframeList row">
-                <li class="rowitem">
+                <li class="rowitem CSSHOVER_SCALEUP">
                     <img src="imgs/research1.png" class="frameimg"/>
                     <div class="fadebackground_imgframe"></div>
                     <p class="frametxt Roboto">
                         Research & Develop
                     </p>
                 </li>
-                <li class="rowitem">
+                <li class="rowitem CSSHOVER_SCALEUP">
                     <img src="imgs/achivements.png" class="frameimg"/>
                     <div class="fadebackground_imgframe"></div>
 
@@ -272,7 +292,7 @@
                 </li>
             </ul>
 
-            <div class="motionCircleEffect"></div>
+            <div class="motionCircleEffect motionCircle1"></div>
         </div>
     </section>
 
@@ -291,7 +311,7 @@
             <p class="descTxt SpoqaHansans">꿈과 열정으로 소재를 창조하는</p>
             <p class="descTxt SpoqaHansans">인재를 기다립니다</p>
 
-            <div class="motionCircleEffect"></div>
+            <div class="motionCircleEffect motionCircle2"></div>
         </div>
     </section>
 
@@ -400,5 +420,11 @@
     </footer>
 </div>
     
+<script>
+    console.log("AOS는?:",AOS);
+    AOS.init();
+
+   
+  </script>
 </body>
 </html>
