--- a/bDot/bemCss/index.html
+++ b/bDot/bemCss/index.html
@@ -112,22 +112,22 @@
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
                                             <div class="cardwrap__content">
-                                                <img src="./img/daeman/proSlider1.png">
+                                                <img src="./img/daeman/proSlider01.png">
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="cardwrap__content">
-                                                <img src="./img/daeman/proSlider2.png">
+                                                <img src="./img/daeman/proSlider02.png">
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="cardwrap__content">
-                                                <img src="./img/daeman/proSlider3.png">
+                                                <img src="./img/daeman/proSlider04.png">
                                             </div>
                                         </div>
                                         <div class="swiper-slide">
                                             <div class="cardwrap__content">
-                                                <img src="./img/daeman/proSlider4.png">
+                                                <img src="./img/daeman/proSlider05.png">
                                             </div>
                                         </div>
                                     </div>
@@ -146,7 +146,7 @@
                                 <div class="swiper-slide">
                                     <div class="main-visual__content">
                                         <div class="main-visual__videoimg" >
-                                            <a href='https://www.youtube.com/watch?v=OuMER-Pgr8o&feature=youtu.be' target="_blank"><img src="./img/daeman/mainvisual_video.png" class="IMG"/></a>
+                                            <a href='https://www.youtube.com/watch?v=OuMER-Pgr8o&feature=youtu.be' target="_blank"><img src="./img/daeman/mainvisual_video2.png" class="IMG"/></a>
                                         </div>
                                         <div class="main-visual__subtext">
                                             <img src="./img/daeman/mainvisualSubtit.svg" style="width:100%;height:auto"/>
@@ -155,17 +155,17 @@
                                             <ul class="visuallist">
                                                 <li >
                                                     <div class="visuallist__item">
-                                                        <img src="./img/daeman/mainvisual_item1.png"class="IMG">
+                                                        <img src="./img/daeman/mainvisual_item1-1.png"class="IMG">
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="visuallist__item">
-                                                        <img src="./img/daeman/mainvisual_item2.png"class="IMG">
+                                                        <img src="./img/daeman/mainvisual_item2-1.png"class="IMG">
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="visuallist__item" >
-                                                        <img src="./img/daeman/mainvisual_item3.png"class="IMG"/>
+                                                        <img src="./img/daeman/mainvisual_item3-1.png"class="IMG"/>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -175,7 +175,7 @@
                                 <div class="swiper-slide">
                                     <div class="main-visual__content">
                                         <div class="main-visual__videoimg" >
-                                            <a href='https://www.youtube.com/watch?v=OuMER-Pgr8o&feature=youtu.be' target="_blank"><img src="./img/daeman/mainvisual_video.png" class="IMG"/></a>
+                                            <a href='https://www.youtube.com/watch?v=OuMER-Pgr8o&feature=youtu.be' target="_blank"><img src="./img/daeman/mainvisual_video2.png" class="IMG"/></a>
                                         </div>
                                         <div class="main-visual__subtext">
                                             <img src="./img/daeman/mainvisualSubtit.svg" style="width:100%;height:auto"/>
@@ -184,17 +184,17 @@
                                             <ul class="visuallist">
                                                 <li >
                                                     <div class="visuallist__item">
-                                                        <img src="./img/daeman/mainvisual_item1.png"class="IMG">
+                                                        <img src="./img/daeman/mainvisual_item1-1.png"class="IMG">
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="visuallist__item">
-                                                        <img src="./img/daeman/mainvisual_item2.png"class="IMG">
+                                                        <img src="./img/daeman/mainvisual_item2-1.png"class="IMG">
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="visuallist__item" >
-                                                        <img src="./img/daeman/mainvisual_item3.png"class="IMG"/>
+                                                        <img src="./img/daeman/mainvisual_item3-1.png"class="IMG"/>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -204,7 +204,7 @@
                                 <div class="swiper-slide">
                                     <div class="main-visual__content">
                                         <div class="main-visual__videoimg" >
-                                            <a href='https://www.youtube.com/watch?v=OuMER-Pgr8o&feature=youtu.be' target="_blank"><img src="./img/daeman/mainvisual_video.png" class="IMG"/></a>
+                                            <a href='https://www.youtube.com/watch?v=OuMER-Pgr8o&feature=youtu.be' target="_blank"><img src="./img/daeman/mainvisual_video2.png" class="IMG"/></a>
                                         </div>
                                         <div class="main-visual__subtext">
                                             <img src="./img/daeman/mainvisualSubtit.svg" style="width:100%;height:auto"/>
@@ -213,17 +213,17 @@
                                             <ul class="visuallist">
                                                 <li >
                                                     <div class="visuallist__item">
-                                                        <img src="./img/daeman/mainvisual_item1.png"class="IMG">
+                                                        <img src="./img/daeman/mainvisual_item1-1.png"class="IMG">
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="visuallist__item">
-                                                        <img src="./img/daeman/mainvisual_item2.png"class="IMG">
+                                                        <img src="./img/daeman/mainvisual_item2-1.png"class="IMG">
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="visuallist__item" >
-                                                        <img src="./img/daeman/mainvisual_item3.png"class="IMG"/>
+                                                        <img src="./img/daeman/mainvisual_item3-1.png"class="IMG"/>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -233,7 +233,7 @@
                                 <div class="swiper-slide">
                                     <div class="main-visual__content">
                                         <div class="main-visual__videoimg" >
-                                            <a href='https://www.youtube.com/watch?v=OuMER-Pgr8o&feature=youtu.be' target="_blank"><img src="./img/daeman/mainvisual_video.png" class="IMG"/></a>
+                                            <a href='https://www.youtube.com/watch?v=OuMER-Pgr8o&feature=youtu.be' target="_blank"><img src="./img/daeman/mainvisual_video2.png" class="IMG"/></a>
                                         </div>
                                         <div class="main-visual__subtext">
                                             <img src="./img/daeman/mainvisualSubtit.svg" style="width:100%;height:auto"/>
@@ -242,17 +242,17 @@
                                             <ul class="visuallist">
                                                 <li >
                                                     <div class="visuallist__item">
-                                                        <img src="./img/daeman/mainvisual_item1.png"class="IMG">
+                                                        <img src="./img/daeman/mainvisual_item1-1.png"class="IMG">
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="visuallist__item">
-                                                        <img src="./img/daeman/mainvisual_item2.png"class="IMG">
+                                                        <img src="./img/daeman/mainvisual_item2-1.png"class="IMG">
                                                     </div>
                                                 </li>
                                                 <li>
                                                     <div class="visuallist__item" >
-                                                        <img src="./img/daeman/mainvisual_item3.png"class="IMG"/>
+                                                        <img src="./img/daeman/mainvisual_item3-1.png"class="IMG"/>
                                                     </div>
                                                 </li>
                                             </ul>
@@ -264,28 +264,28 @@
                         </div>
                     </div>
                     <div class="main-event">
-                        <h2 class="main-event__subtitle "data-aos="fade-up"data-aos-offset="-160" data-aos-duration="150">
+                        <h2 class="main-event__subtitle ">
                             <img src="./img/daeman/eventTitle.png" style="width:100%;height:auto">
                         </h2>
-                        <div class="main-event__eventImg"data-aos="fade-up"data-aos-offset="-160" data-aos-duration="150">
+                        <div class="main-event__eventImg">
                             <img src="./img/daeman/eventbanner.png" class="IMG"/>
                         </div>
                     </div>
                     <div class="main-event2">
-                        <h2 class="main-event2__subtitle"data-aos="fade-up">
+                        <h2 class="main-event2__subtitle">
                             <img src="./img/daeman/eventTitle2.png" style="width:100%;height:auto">
                         </h2>
-                        <div class="main-event2__eventImg"data-aos="fade-up">
+                        <div class="main-event2__eventImg"">
                             <img src="./img/daeman/eventImg1.png" class="IMG"/>
                         </div>
-                        <div class="main-event2__eventImg"data-aos="fade-up">
+                        <div class="main-event2__eventImg">
                             <img src="./img/daeman/eventImg2.png" class="IMG"/>
                         </div>
                     </div>
-                    <div class="main-discount"data-aos="fade-up">
-                       <img src="./img/daeman/discountEvent.png" style="width:100%;height:auto"/>
+                    <div class="main-discount">
+                       <img src="./img/daeman/discountbanner.png" style="width:100%;height:auto"/>
                     </div>
-                    <div class="main-instagram"data-aos="fade-up">
+                    <div class="main-instagram">
                         <h2 class="main-instagram__subtitle">
                             <img src="./img/daeman/instaTitle.png"style="width:100%;height:auto"/>
                         </h2>
@@ -306,7 +306,7 @@
                     </div>
                     <div class="footer">
                         <img src="./img/daeman/++footer.png"/>
-                        <a href='#' class='footertop'data-aos="fade-up">
+                        <a href='#' class='footertop'>
                         </a>
                     </div>
                     <div class="botmenuwrap">
