--- a/bDot/baseSample_forBdot/mainDev.html
+++ b/bDot/baseSample_forBdot/mainDev.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="css/style.css"/>
     <link href="https://fonts.googleapis.com/icons" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/test.css"/>
     <!--<link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>-->
@@ -22,6 +23,164 @@
     <img src="imgs/Circle-Loading.svg"/>
 </div> 
 
+<div class="header">
+    <div class="header__inner">
+        <div class="tabzilla">
+            <a href="#" class="tabzilla__link">
+                <span class="blind">mozilla</span>
+            </a>
+        </div>
+        <div class="header__logo">
+            <div class="logo">
+                <a href="#" class="logo__link">
+                    <h1 class="blind">MDN</h1>
+                </a>
+            </div>
+        </div>
+        <div class="header__auth header__auth--opened">
+            <div class="auth">
+                <div class="auth-means">
+                    <p class="auth-means__text">Sigin in with</p>
+                    <ul class="auth-means__list">
+                        <li class="auth-means__item auth-means__item--persona">
+                            <a href="#">
+                                <i class="fas fa-user"></i>
+                                <span class="blind">Persona</span>
+                            </a>
+                        </li>
+                        <li class="auth-means__item auth-means__item--github">
+                            <a href="#">
+                                <i class="fab fa-github"></i>
+                                <span class="blind">Github</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="auth-picker">
+                    <ul class="auth-picker__list">
+                        <li class="auth-picker__item">
+                            <a href="#">
+                                <i class="fas fa-user"></i>
+                                <span>Persona</span>
+                            </a>
+                        </li>
+                        <li class="auth-picker__item">
+                            <i class="fab fa-github"></i>
+                            <span>Github</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="nav">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="#" class="nav__link">
+                        <span>Web Platform</span>
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <div class="nav__submenu nav__submenu--col2">
+                        <div class="nav-submenu">
+                            <div class="nav-submenu__column">
+                                <strong class="nav-submenu__title">Column 01</strong>
+                                <ul class="nav-submenu__list">
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">HTML</a>
+                                    </li>
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">CSS</a>
+                                    </li>
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">Javascript</a>
+                                    </li>
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">HTML</a>
+                                    </li>
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">CSS</a>
+                                    </li>
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">Javascript</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="nav-submenu__column">
+                                <strong class="nav-submenu__title">Column 02</strong>
+                                <ul class="nav-submenu__list">
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">Anne</a>
+                                    </li>
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">NYKIM</a>
+                                    </li>
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">Nana</a>
+                                    </li>
+                                    <li class="nav-submenu__item">
+                                      <a href="#" class="nav-submenu__link">...more</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <button class="nav-submenu__close">
+                                <span class="blind">Close submenu</span>
+                                <i class="fa fa-times-circle"></i>
+                            </button>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      <span>Nav Menu 02</span>
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      <span>Nav Menu 03</span>
+                    </a>
+                  </li>
+                  <li class="nav__item">
+                    <a href="#" class="nav__link">
+                      <span>Nav Menu 04</span>
+                    </a>
+                  </li>
+            </ul>
+        </div>
+        <div class="header__search">
+            <div class="search">
+                <form>
+                    <div class="search__inner">
+                        <div class="search__title">
+                            <label for="main-search">
+                                <i class="fa fa-search"></i>
+                                <span class="blind">Search</span>
+                            </label>
+                        </div>
+                        <input type="text" id="main-search" class="search__input search__input--extend"/>
+                        <input type="submit" class="search__button blind" value="Search"/>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h2>search를 별도 분리한 경우</h2>
+<div class="search">
+    <form>
+      <div class="search__inner">
+        <div class="search__title">
+          <label for="main-search">
+            <i class="fa fa-search"></i>
+            <span class="blind">Search</span>
+          </label>
+        </div>
+        <input type="text" id="main-search" class="search__input "> <!--focus시 .search__input--extend 클래스를
+  추가합니다-->
+        <input type="submit" class="search__button blind" value="Search">
+      </div>
+    </form>
+  </div>
+  
 <!--<div id="javascript_scrollContainer" class="main_localScrollwrapper"targetindex="javascript_scrollContaineronly">-->
 <div id='javascript_contentContainer'>
     
@@ -98,7 +257,7 @@
                 0~1200|1200*1280$height:100%;background-color:#000;left:50%;top:50%;transform:translateX=-50%@translateY=-50%;position:absolute^
                 1201~1920|1920*1080$height:1080px;background-color:#000;left:50%;top:50%;transform:translateX=-50%@translateY=-50%;position:absolute^
                 1921~9999|1920*1080$height:1080responmin;background-color:#000;left:50%;top:50%;transform:translateX=-50%@translateY=-50%;position:absolute">
-                    <source src="imgs/mainvideo.mp4" type="video/mp4">
+                    <source src="imgs/mainvideoSimple.mp4" type="video/mp4">
                 </video>
             </div>
             <div id="transformAnimateTarget1" class="javascript_Css_define position_absolute"javascript_Css_define="
