--- a/bDot/cabone/index.html
+++ b/bDot/cabone/index.html
@@ -620,7 +620,7 @@
         </div>
     </section>
 
-    <section class="section07 javascript_scroll_response javascript_scroll_response_section07">
+    <section class="section07">
         <div class="inner">
             <div class="floatRightRow">
                 <article class="dataArticle first">
@@ -668,7 +668,7 @@
                 data-aos-delay="300"
                 data-aos-offset="100">한국카본은 국제표준인증 관리를 통한 지속적인 개선을 추구합니다.</p>
             </article>
-            <div class="motionCircleEffect javascript_Css_define motionCircle3"targetindex="coloreffectTarget_scrollresponse_section07"javascript_Css_define="
+            <div class="motionCircleEffect javascript_Css_define motionCircle3  javascript_scroll_response javascript_scroll_response_section07"targetindex="coloreffectTarget_scrollresponse_section07"javascript_Css_define="
             0~9999|1920*1080$background-color:rgba(60,150,220,0.8)"></div>
         </div>
     </section>
